# parquet-engine

./: .gitignore  Cargo.toml  LICENSE  README.md  parquet_engine.pyi  pyproject.toml
.github/workflows/: CI.yml  release.yml
src/: lib.rs
tests/: test_roundtrip.py
