[package]
name = "parquet-engine"
version = "0.1.1"
edition = "2024"

[lib]
name = "parquet_engine"
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "59.0.0", features = ["json"] }
bytes = "1.11.1"
parquet = { version = "59.0.0", features = ["arrow"] }
pyo3 = { version = "0.28.3", features = ["extension-module", "abi3-py310"] }
