[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "parquet-engine"
version = "0.1.0"
description = "JSON <-> Parquet encode/decode engine (Arrow + Parquet, in Rust)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Güney Kıymaç", email = "guneykiymac@gmail.com" }]
keywords = ["parquet", "arrow", "json", "serialization"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[project.urls]
Repository = "https://github.com/GongJr0/parquet-engine"

[dependency-groups]
dev = ["maturin>=1.7,<2.0", "pytest>=8.0"]

[tool.maturin]
module-name = "parquet_engine"
